--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -17,7 +17,7 @@
   --grayText: #7e7e7e;
   --whiteLight: #fff;
   --whiteRegular: #f5f5f5;
-  font-size: 62.5%;
+  font-size: 35.5%;
 }
 
 html {
@@ -29,7 +29,7 @@ body {
   margin: 0;
   font-family: "Mulish", sans-serif;
   /* background-color: var(--whiteRegular); */
-  font-size: 1.3rem;
+  font-size: 2rem;
   color: var(--blackText);
 }
 #side {
@@ -47,7 +47,7 @@ nav {
 }
 
 #navcontainer {
-  max-width: 1170px;
+  max-width: 80%;
   margin: 0px auto;
   padding: 1.6rem 0.5rem;
   display: flex;
@@ -127,7 +127,7 @@ nav .hamburger {
   width: 100%;
   white-space: normal;
   font-weight: 400;
-  font-size: calc(12px + 4 * ((100vw - 300px) / 1100));
+  font-size: calc(30px + 4 * ((100vw - 300px) / 1100));
   color: rgb(255, 255, 255);
   text-align: center;
   /* margin-bottom: -20px; */
@@ -162,7 +162,7 @@ nav .hamburger {
 }
 
 #sideList {
-  max-width: 400px;
+  max-width: 300px;
   width: 100%;
   position: absolute;
   top: 0;
